Menu now hover; z-index navbar; resize fix

--- a/style.css
+++ b/style.css
@@ -1,84 +1,101 @@
-  /* GENERAL STYLE */
-  body {
-    /* background-color: black; */
-    background-image: linear-gradient(to bottom, rgba(255,255,255,0.5),
-      rgba(0,0,0,0)), url(img/test_square.png);
-    background-repeat: no-repeat;
-    background-position: bottom right;
-    background-attachment: fixed;
-  }
-
+/* GENERAL STYLE */
+body {
+  /* background-color: black; */
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0.5),
+     rgba(0,0,0,0)), url(img/test_square.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-attachment: fixed;
+  overflow-y: hidden; /* Disables vertical scrolling */
+}
+  
 /* NAVIGATION BAR */
 .navbar {
-    background-color: rgb(0, 0, 0);
-    font-family: Arial, Helvetica, sans-serif;
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-  
-  .navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    background-color: red;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .show {
-    display: block;
-  }
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
   /* PADDING + MARGIN ADJUSTMENT ((NEEDS FIX)) */
   iframe {
-    margin-top: 45px;
+    margin-top: 60px;
   }
 
-  /* TEST - SPLASH */
+/* RESPONSIVE IFRAME */
+  .iframe-container {
+    overflow: hidden;
+    padding-top: 50%;
+    position: relative;
+  }
+   
+  .iframe-container iframe {
+     border: 0;
+     height: 95%;
+     left: 10vw;
+     position: absolute; /* position: fixed; */
+     top: 10px;
+     width: 80%;
+  }
+
+/* TEST - SPLASH */
   #app {
     height: 100vh;
     width: 100%;
@@ -93,20 +110,4 @@
 
   #wrapper {
     text-align: center;
-  }
-
-/* RESPONSIVE IFRAME */
-  .iframe-container {
-    overflow: hidden;
-    padding-top: 56.25%;
-    position: relative;
-  }
-   
-  .iframe-container iframe {
-     border: 0;
-     height: 90%;
-     left: 0;
-     position: absolute;
-     top: 10px;
-     width: 80%;
   }
